--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
+{% extends 'blog/base.html' %}
 
-<html>
-<head>
-<title>Django Girls blog</title>
-</head>
-<body>
-<div>
-<h1><a href="">Django Girls Blog</a></h1>
+{% block content %}
+{% for post in posts %}
+<div class="post">
+<div class="date">
+{{ post.published_date }}
 </div>
-<div>
-<p>published: 14.06.2014, 12:14</p>
-<h2><a href="">My first post</a></h2>
-<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id </div>
-<div>
-<p>published: 14.06.2014, 12:14</p>
-<h2><a href="">My second post</a></h2>
-<p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id </div>
-</body>
-</html>
+<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1><p>{{ post.text|linebreaks }}</p>
+</div>
+{% endfor %}
+{% endblock %}
+Django Girls Tutorial
+Template
